# xpair

./: .gitignore  CLAUDE.command  README.ko.md  README.md  announcements-extra.json  auto-approve-watchdog.sh  bootstrap.sh  build-native.sh
.github/workflows/: ci.yml  cli-rs.yml  package-windows.yml  release.yml  win-probe.yml
.omc/: project-memory.json
.omc/state/: agent-replay-318aaabe-6503-4cc0-b755-647a6fec013a.jsonl  hud-stdin-cache.json  subagent-tracking.json
AutoApproveNative/: main.swift
Casks/: remote-pair-host.rb  remote-pair.rb  xpair-host.rb  xpair.rb
RemotePairHost/: AppDelegate.swift  Config.swift  HostManager.swift  Sessions.swift  Updater.swift  main.swift
RemotePairNative/: main.swift
bench/: .gitignore  README.md  baseline-score.sh  baseline-variance.sh  evaluate.sh  grid.sh  launch-content.sh  package-lock.json  package.json  run-baseline.sh  run-impaired.sh  sweep-pli.sh
bench/client/: index.js  parse-check.js  stats.js  variance.js
bench/content/: pattern.html
bench/proxy/: relay.js  relay.test.js
bench/score/: recovery.js  score.js  score.test.js
client/: remote-pair  remote-pair-desktop  remote-pair-launch  remote-pair-screen-deploy
client/cli/: approve-permission-prompts.test.js  detached-session-handling.test.js  folder-mapping-launch.test.js  hangul-romanize  host-child-computer-use.test.js  platform-portability.test.js  remote-pair  remote-pair-askpass  remote-pair-desktop  remote-pair-editor  remote-pair-launch  remote-pair-mount  remote-pair-screen-deploy  remote-pair-web  reset-onboarding.sh  session-engines-q0261.test.js  session-restore.test.js  terminal-session-engines.test.js  uninstall-client.sh  uninstall-host.sh  xpair  xpair-askpass  xpair-desktop  xpair-editor  xpair-launch  xpair-launch-detached-session.test.js  xpair-launch-q0056.test.js  xpair-launch-session-isolation.test.js  xpair-mount
client/cli-rs/: Cargo.toml  README.md  rust-toolchain.toml
client/cli-rs/packaging/windows/: README.md  xpair.wxs
client/cli-rs/src/: attach.rs  config.rs  discover.rs  doctor.rs  host_permissions.rs  install_host.rs  launch.rs  lib.rs  logs.rs  main.rs  mapping.rs  mode.rs  notify.rs  open_gui.rs  platform.rs  remote_quote.rs  respawn.rs  session.rs  status.rs  tools.rs  transport.rs
client/ide/: .gitignore  CONTRIBUTING.md  README.md  REMOTEPAIR.md  build.sh  update_upstream.sh
client/onboarding/: index.html  package-lock.json  package.json  vite.config.ts
client/web/: app.js
docs/: architecture.md  cases.md  cutover.md  desktop-ide-design.md  future.md  ide-merge-architecture.md  ide-merge-runbook.md  ide-restructure-plan.md  logging.md  m-mount.md  m4-code-server.md  m5-remote-desktop.md  monorepo-structure.md  onboarding-flow.md  onboarding-redesign-blueprint.md  onboarding-storyboard.html  rd-enhance-plan.md  rd-streaming-loss-benchmark.md  requirements-raw.md  requirements.md  sidecar-webrtc-design.md  val-process.md
docs/behavioral-spec/: onboarding-cli-engine-gate.md  onboarding-discovery.md  onboarding-engine-gate.md  onboarding-reconnect.md  onboarding-ssh-keyauth.md  onboarding-step-progression.md  onboarding-tcc-permissions.md  onboarding-telemetry-consent.md
docs/subagents/: 111.md  111111.md  111111212.md  111111312.md  111111412.md  111111511.md  11111151111.md  11111151111121.md  1111115111112112.md  111111512.md  111112.md  111112111.md  11111211111.md  1111121111111.md  111112111111111.md  111112111111114.md  1111121111112.md  111112111111213.md  1111121111142.md  111112111114212.md  111112111114222.md  11111211142.md  1111121114212.md  111112111421212.md  1111121114222.md  111112111422212.md  111112111422222.md  111112122.md  11111212212.md  1111121221212.md  111112122121212.md  1111121221222.md  111112122122212.md  111112122122222.md  11111212222.md  1111121222212.md  111112122221212.md  1111121222222.md  111112122222212.md  111112122222222.md  (+2684 more)
docs/verification/: SUMMARY.md  decisions-round1.md  fulltree-SUMMARY.md  fulltree-validity.md  fulltree-verdicts.csv  (+7 more)
host/: Package.swift  approve-keyboard-contract.test.js  approve-prompt-coverage.test.js  build-host.sh  build-mosh.sh  build-tmux-aqua.sh  make-signing-cert.sh  ocr-find.swift  remote-pair-approve-router.sh  rules.txt  rules.txt.example  uninstall-host.sh  xpair-approve-router.sh
host/rd/pake/: Cargo.toml  PROTOCOL.md  deny.toml
host/rd/pake/examples/: gen_vectors.rs
host/rd/pake/src/: ffi.rs  lib.rs  tests.rs  vectors.rs
host/rd/pake/tests/: wire_interop.rs
host/rd/pake/vectors/: basic-482173.txt  pin-000000.txt
host/rd/screen/: Cargo.toml  README.md  deny.toml
host/rd/screen/examples/: webrtc_selftest.rs
host/rd/screen/src/: control.rs  log.rs  main.rs  serve.rs  serve_webrtc.rs
ide/: README.md  product.json
install/: claude.gitignore  config.sh  install.sh  lib.sh  sync-setup.sh  uninstall.sh
legacy/: 1pw-auto-approve.sh  build.sh  loader.applescript
native/remote-pair-screen/: Cargo.toml  README.md  deny.toml
native/remote-pair-screen/src/: main.rs  serve.rs
patches/: 00-copilot-fix-action-condition.patch  zz-remotepair-ide-frontend.patch
remotepair-ext/: extension.js  package.json
rpmedia/: INPUT-FINDINGS.md  rp-ax-pid.swift  rp-input-e2e.html  rp-input-inject.swift  rp-input-target.swift
rs/: .gitignore  README.md
scripts/: build-host.sh  build-native.sh  build-tmux-aqua.sh  make-menubar-template.swift  remote-pair-approve-router.sh  rules.txt.example
shared/: bootstrap.sh  check-ide-selfcontained.sh  claude.gitignore  config.sh  install-client.sh  install-role-aware-q0021-q0022-q0343.test.js  install.sh  lib.sh  logging.sh  sync-setup.sh  uninstall.sh
tests/: EQUIVALENCE.md  HARNESS.md  lib.sh  run.sh  t_00_smoke.sh  t_02_mapping.sh  t_03_session_naming.sh  t_04_target.sh  t_05_local_policy.sh  t_06_remote_setup.sh  t_07_resilience.sh  t_08_logging_zombie.sh  t_09_app_resolution.sh  t_10_install_reversibility.sh  t_11_engine.sh  t_12_attach.sh  t_13_ls_json.sh  t_14_security.sh  t_15_ext_js_contracts.sh  t_16_map_method.sh  t_17_doctor_smb.sh  t_18_client_mosh.sh  test_remote_pair_web.py
(+404 files in other folders)
