[package]
name = "screen"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "License-clean screen-capture sidecar for RemotePair Remote Desktop (v1 high-performance path). v1a: continuous-capture WebSocket JPEG frame server; v1b (webrtc + VideoToolbox HW encode) TODO."
repository = "https://github.com/x10lab/remote-pair"
publish = false

# ---------------------------------------------------------------------------
# DEPENDENCY LICENSE POLICY: PERMISSIVE ONLY (MIT / Apache-2.0 / BSD / ISC).
# RemotePair is Apache-2.0. RustDesk is AGPL-3.0 and MUST NOT be a dependency.
# The AGPL firewall is enforced by deny.toml (cargo-deny check licenses).
# ---------------------------------------------------------------------------
[dependencies]
# macOS screen capture.
#
# Capture-crate selection (all permissive — see deny.toml):
#   * scap (MIT)             — tried first per the original plan, but its
#                              ScreenCaptureKit backend (cidre) runs `xcodebuild`
#                              in build.rs, which fails on broken Xcode toolchains.
#                              It did NOT build cleanly on this machine.
#   * screencapturekit (MIT) — viable alternative, stream-oriented API.
#   * xcap (Apache-2.0)      — CHOSEN. Simple synchronous one-shot API
#                              (`Monitor::all()` -> `monitor.capture_image()`),
#                              no xcodebuild dependency, built cleanly on
#                              macOS arm64, and is Apache-2.0 (same as RemotePair).
# xcap re-exports the `image` crate, so encode/decode versions stay in lockstep.
xcap = "0.9.6"
# CLI subcommands. MIT/Apache-2.0.
clap = { version = "4", features = ["derive"] }
# Frame encode. MIT/Apache-2.0. Pinned to the same minor series xcap
# re-exports (0.25) to avoid type skew across the boundary.
#   * png  — single-shot `capture` subcommand.
#   * jpeg — continuous `serve` subcommand (smaller frames + a quality knob).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# WebSocket transport for the v1a `serve` path. `tungstenite` is the pure-Rust,
# SYNCHRONOUS WebSocket implementation (MIT). We drive it over std
# `TcpListener` + threads so we do NOT pull in an async runtime (tokio) for this
# first cut. No TLS feature (loopback-only bind; ssh -L provides the encryption).
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
webrtc = { version = "0.17.1", optional = true }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time"], optional = true }
tokio-tungstenite = { version = "0.29.0", optional = true }
futures-util = { version = "0.3.32", optional = true }
bytes = { version = "1.11.1", optional = true }
serde_json = { version = "1.0.150", optional = true }

[features]
# v1b transport: webrtc-rs (MIT/Apache-2.0, UDP/RTP) carrying VideoToolbox H.264.
# UDP is mandatory — TCP/WebSocket head-of-line blocking stalls a screen stream
# on any lost packet. Enabling this pulls webrtc + a tokio runtime (the v1a
# `serve` path stays sync and unaffected).
webrtc = ["dep:webrtc", "dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:bytes", "dep:serde_json"]
tokio-tungstenite = ["dep:tokio-tungstenite"]
futures-util = ["dep:futures-util"]
bytes = ["dep:bytes"]
serde_json = ["dep:serde_json"]

[profile.release]
opt-level = 3
lto = "thin"
